--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=com.mercury1089.robot
+package=com.mercury1089.main
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
