--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=com.mercury1089.main
+package=org.usfirst.frc.team1089.robot
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
